refactor: adjusting cors origins and set expose headers